# stock1

./: LICENSE
Stock-Market-Prediction-main/: Dockerfile  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py
Stock-Market-Prediction-main/config/: production_config.yaml  training_config.yaml
Stock-Market-Prediction-main/docs/: LIGHTGBM_INTEGRATION_GUIDE.md
Stock-Market-Prediction-main/examples/: quick_start.py
Stock-Market-Prediction-main/k8s/: deployment.yaml
Stock-Market-Prediction-main/stock_prediction/: __init__.py
Stock-Market-Prediction-main/stock_prediction/analysis/: shap_analysis.py
Stock-Market-Prediction-main/stock_prediction/api/: main.py  prediction_api.py
Stock-Market-Prediction-main/stock_prediction/dashboard/: app.py  enhanced_app.py
Stock-Market-Prediction-main/stock_prediction/data/: data_processor.py  time_series_cv.py
Stock-Market-Prediction-main/stock_prediction/models/: lstm_model.py  ml_models.py
Stock-Market-Prediction-main/stock_prediction/scripts/: benchmark_fairness_validation.py  benchmark_models.py  comprehensive_evaluation.py  consistent_validation_demo.py  evaluate_models.py  prepare_data.py  reproducibility_demo.py  train_lightgbm.py  train_model.py  train_pipeline.py
Stock-Market-Prediction-main/stock_prediction/services/: model_service.py
Stock-Market-Prediction-main/tests/: test_data_processor.py  test_lightgbm_integration.py  test_lstm_model.py  test_ml_models.py  test_time_series_cv.py
